--- a/src/Components/Products/showproduct.css
+++ b/src/Components/Products/showproduct.css
@@ -1,4 +1,3 @@
-/* Existing styles */
 .body {
     display: flex;
     flex-direction: column;
@@ -24,13 +23,18 @@
     margin: 1rem;
     color: black;
   }
-  
+  .css-9fjbm5-MuiGrid-root>.MuiGrid-item {
+    padding-left: 26px;
+    padding-right: 26px;
+}
   .card {
     background-color: white;
     color: black;
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4); 
     padding: 0;
+    margin: 0;
   }
+
   
   .card-image {
     width: 100%;
