--- a/src/Components/Products/EditProduct.css
+++ b/src/Components/Products/EditProduct.css
@@ -10,18 +10,21 @@
   }
   
   .edit-product-title {
-    margin-top: 18vh;
+    margin-top: 60px;
   }
   
   .edit-product-form {
+    margin: 0 auto;
+    max-width: 600px;
     padding: 16px;
-    margin-bottom: 40px;
-    border-radius: 8px;
-    background-color: rgba(255, 255, 255, 0.7);
-    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
-    max-width: 400px;
-    width: 100%;
   }
+  
+  @media (max-width: 600px) {
+    .edit-product-form {
+      padding: 8px;
+    }
+  }
+  
   
   .edit-product-loader {
     display: flex;
@@ -52,12 +55,7 @@
     border-color: black;
   }
   
-  .edit-product-image-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-  }
+ 
   
   .selected-image {
     margin-top: 16px;
@@ -101,4 +99,4 @@
     margin-top: 16px;
     text-align: center;
   }
-  
+ 
