--- a/src/Components/Home/Carousel.css
+++ b/src/Components/Home/Carousel.css
@@ -2,7 +2,7 @@
     position: relative;
     width: 100%;
     overflow: hidden;
-    margin-top: 56px; /* Adjust based on your design */
+    margin-top: 56px; 
   }
   
   .carousel-image {
