--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,4 +1,3 @@
-
 .home-container {
   padding: 20px;
 }
@@ -92,25 +91,59 @@
   margin-top: 20px;
 }
 .cta-subscription {
-  position: relative; 
-  background-size: cover; 
-  background-position: center; 
-  background-repeat: no-repeat; 
-  color: white; 
-  padding: 2rem; 
-  text-align: center; 
+  position: relative;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  color: white;
+  padding: 2rem;
+  text-align: center;
 }
 
 .cta-subscription .section-title {
-  font-size: 2rem; 
-  margin-bottom: 1rem; 
+  font-size: 2rem;
+  margin-bottom: 1rem;
 }
 
 .cta-subscription .section-description {
-  font-size: 1.2rem; 
-  margin-bottom: 1.5rem; 
+  font-size: 1.2rem;
+  margin-bottom: 1.5rem;
 }
 
 .subscribe-button {
-  font-size: 1rem; 
+  font-size: 1rem;
 }
+.join-blog {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.testimonial-card {
+  position: relative;
+  overflow: hidden; /* Ensure the pseudo-element does not overflow */
+  transition: transform 0.3s ease;
+}
+
+.testimonial-card::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0; right: 0; bottom: 0; left: 0;
+  background: hsl(200 100% 80%); 
+  transform: scaleX(0);
+  transform-origin: bottom right;
+  z-index: -1;
+  transition: transform 0.3s ease;
+}
+
+.testimonial-card:hover::before {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
+.testimonial-card:hover {
+  transform: translateY(-10px);
+  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.1);
+}
+
